Refactors to use UI config

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@
 :root {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   /* font-family: 'Times New Roman', Times, serif; */
-  font-family: "Playfair Display";
+  /* font-family: "Playfair Display"; */
+  font-family: "Sarabun";
   font-optical-sizing: auto;
   /* font-weight: <weight>; */
   font-style: normal;
